# src/main/resources/static/openapi.yaml
@@ -151,6 +151,7 @@ components:
             type: string
     Alias:
       required:
+      - category
       - isPrimary
       - name
       type: object
@@ -161,6 +162,11 @@ components:
           type: string
         isPrimary:
           type: boolean
+        category:
+          type: string
+          enum:
+          - strong
+          - weak
     Document:
       required:
       - type
